# zenzefi_backend

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CLAUDE_ROOT.md  DEPLOYMENT.md  DEPLOYMENT_DOCKER.md  Dockerfile  FIX_CONTAINERCONFIG_ERROR.md  FIX_DEPLOYMENT.md  HTTPS_TROUBLESHOOTING.md  NGINX_SSL_SETUP.md  QUICK_DEPLOY_CHECKLIST.md  QUICK_FIX.md  QUICK_FIX.sh  README.md  RUNNING.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.tailscale.yml  docker-compose.prod.yml  pyproject.toml  run_dev.py
.claude/: settings.local.json  settings.local.json.example
alembic/: env.py
app/: config.py  exceptions.py  main.py
docs/: ADR.md  BACKEND.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_TAILSCALE.md  DEPLOYMENT_UPDATE.md  GITHUB_SECRETS_SETUP.md  HEALTH_CHECKS.md  INTEGRATION_PLAN.md  PHASE_2_CURRENCY_GUIDE.md  PHASE_4_SUMMARY.md  QUICKSTART.md  ROADMAP_V1.md  SSL_ISSUE_POSTMORTEM.md  TOKEN_ACTIVATION.md  TOKEN_OPTIMIZATION.md
nginx/: nginx.conf
scripts/: backup_database.sh  check_database.py  cleanup_and_redeploy.sh  clear_database.py  create_superuser.py  create_test_database.py  deploy.sh  deploy_docker.sh  fix_ssl.sh  init_db.py  mcp_server.py  redis_mcp.py  reset_database.py  restore_backup.sh  test_cost_znc.py  test_create_token.py  zenzefi-backup.cron
tests/: conftest.py  test_admin_endpoints.py  test_api_auth.py  test_api_currency.py  test_api_payment.py  test_api_tokens.py  test_auth_service.py  test_auth_service_edge_cases.py  test_bundle_service_edge_cases.py  test_bundles.py  test_main.py  (+16 more)
(+84 files in other folders)
